// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: add cameraGroup component prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from first to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div>
      <article
        className="wonder-string-input"
      >
        <span
          className="component-label"
        >
          Name : 
        </span>
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="camera"
        />
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            position : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="40"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            rotate : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            scale : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Camera Group
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-camera-group"
      >
        <div
          className=""
        >
          <div
            className=""
          >
            CameView : 
          </div>
          <article
            className="wonder-camera-view"
          >
            <article
              className="wonder-select"
            >
              <span
                className=""
              >
                type : 
              </span>
              <select
                onChange={[Function]}
                value="0"
              >
                <option
                  value="0"
                >
                  basic_cameraView
                </option>
              </select>
            </article>
            <div
              className=""
            >
              <div
                className=""
              >
                currentCamera : 
              </div>
              <input
                defaultChecked={true}
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "height": "35px",
                    "width": "35px",
                  }
                }
                type="checkbox"
              />
            </div>
          </article>
        </div>
        <hr />
        <div
          className=""
        >
          <div
            className=""
          >
            Projection : 
          </div>
          <article
            className="wonder-camera-view"
          >
            <article
              className="wonder-select"
            >
              <span
                className=""
              >
                type : 
              </span>
              <select
                onChange={[Function]}
                value="0"
              >
                <option
                  value="0"
                >
                  perspective
                </option>
              </select>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Near : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="0.1"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Far : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="1000"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Aspect : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="1"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Fovy : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="60"
                />
              </article>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          ArcballCameraController
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-inspector-arcballCameraController"
      >
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            distance : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="10"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            min distance : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0.05"
          />
        </article>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add Component
        </button>
      </div>
    </article>
  </article>
</article>
`;

exports[`redo_undo: add cameraGroup component prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div>
      <article
        className="wonder-string-input"
      >
        <span
          className="component-label"
        >
          Name : 
        </span>
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="camera"
        />
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            position : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="40"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            rotate : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            scale : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Camera Group
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-camera-group"
      >
        <div
          className=""
        >
          <div
            className=""
          >
            CameView : 
          </div>
          <article
            className="wonder-camera-view"
          >
            <article
              className="wonder-select"
            >
              <span
                className=""
              >
                type : 
              </span>
              <select
                onChange={[Function]}
                value="0"
              >
                <option
                  value="0"
                >
                  basic_cameraView
                </option>
              </select>
            </article>
            <div
              className=""
            >
              <div
                className=""
              >
                currentCamera : 
              </div>
              <input
                defaultChecked={true}
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "height": "35px",
                    "width": "35px",
                  }
                }
                type="checkbox"
              />
            </div>
          </article>
        </div>
        <hr />
        <div
          className=""
        >
          <div
            className=""
          >
            Projection : 
          </div>
          <article
            className="wonder-camera-view"
          >
            <article
              className="wonder-select"
            >
              <span
                className=""
              >
                type : 
              </span>
              <select
                onChange={[Function]}
                value="0"
              >
                <option
                  value="0"
                >
                  perspective
                </option>
              </select>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Near : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="0.1"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Far : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="1000"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Aspect : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="1"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Fovy : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="60"
                />
              </article>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          ArcballCameraController
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-inspector-arcballCameraController"
      >
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            distance : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="10"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            min distance : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0.05"
          />
        </article>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add Component
        </button>
      </div>
    </article>
  </article>
</article>
`;

exports[`redo_undo: add cameraGroup component prepare first step: set currentSceneTreeNode test undo operate test undo one step undo step which from first to zero 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div>
      <article
        className="wonder-string-input"
      >
        <span
          className="component-label"
        >
          Name : 
        </span>
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="camera"
        />
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            position : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="40"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            rotate : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            scale : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Camera Group
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-camera-group"
      >
        <div
          className=""
        >
          <div
            className=""
          >
            CameView : 
          </div>
          <article
            className="wonder-camera-view"
          >
            <article
              className="wonder-select"
            >
              <span
                className=""
              >
                type : 
              </span>
              <select
                onChange={[Function]}
                value="0"
              >
                <option
                  value="0"
                >
                  basic_cameraView
                </option>
              </select>
            </article>
            <div
              className=""
            >
              <div
                className=""
              >
                currentCamera : 
              </div>
              <input
                defaultChecked={true}
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "height": "35px",
                    "width": "35px",
                  }
                }
                type="checkbox"
              />
            </div>
          </article>
        </div>
        <hr />
        <div
          className=""
        >
          <div
            className=""
          >
            Projection : 
          </div>
          <article
            className="wonder-camera-view"
          >
            <article
              className="wonder-select"
            >
              <span
                className=""
              >
                type : 
              </span>
              <select
                onChange={[Function]}
                value="0"
              >
                <option
                  value="0"
                >
                  perspective
                </option>
              </select>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Near : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="0.1"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Far : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="1000"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Aspect : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="1"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Fovy : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="60"
                />
              </article>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add Component
        </button>
      </div>
    </article>
  </article>
</article>
`;
